resolving errors